2006-01-18  David Hampton  <hampton@employees.org>

	* src/app-utils/gnc-component-manager.c: Tweak a debugging
	statement.

	* src/gnome-search/gnc-general-search.c: Unregister this component
	properly when destroying it.

	* src/gnome-utils/gnc-query-list.c: The GtkObject destroy function
	can be called multiple times. Protect from unregistering the
	component multiple times.

2006-01-18  Joshua Sled  <jsled@asynchronous.org>

	* src/app-utils/gnc-account-merge.[ch]: C-style comment
	conventions; rename identifiers that are C++ keywords.

2006-01-18  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/gnc-plugin-page-account-tree.c
	(gnc_plugin_page_account_tree_create_widget): Remove name-editing
	callback setup.

2006-01-18  David Hampton  <hampton@employees.org>

	* All xxx.schemas files renamed to xxx.schemas.in.
	* All schema directory Makefile.am files replaced.
	* make-gnucash-potfiles.in: Now also pulls strings from schema
	files.  Together these fix bugs #327507 and #327353 which are
	about schema file strings not being translated.

2006-01-18  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sx-from-trans.c (sxftd_update_fs): Propgate
	bi-weekly ui-frequency in transition from "schedule transaction"
	dialog to "Advanced..." (Scheduled Transaction Editor).
	Patch from Robert Zaleski <rzaleski81@yahoo.com>.
	<http://bugzilla.gnome.org/show_bug.cgi?id=327547>.

2006-01-18  Derek Atkins  <derek@ihtfp.com>

	* src/bin/Makefile.am:  Fix some srcdir/builddir issues
	  with #includes and libraries.
	* src/Makefile.am:  Move 'bin' last so that it's built
	  after gnome-utils so Chris' change works.

2006-01-17  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/mt940/gnc-mt940-import.c: Add initial work on
	upgrading the old non-compilable mt940-importer code by
	F. Steinel. Code still non-compilable, see
	http://bugzilla.gnome.org/show_bug.cgi?id=325170

2006-01-17  Neil Williams <linux@codehelp.co.uk>
